# deep-learning-examples

./: .gitignore  pyproject.toml
cat_dog_classification/: main.py  main_01.ipynb  main_02.ipynb  main_pytorch.ipynb  main_pytorch2.ipynb
cat_dog_classification/dockerized/: .dockerignore  Dockerfile  Dockerfile2  build_image.sh  predict.py  pyproject.toml  train_model.py
dog_breed_classification/: main.py
multi_modal_sentiment_classification/: main_01.ipynb
text_sentiment_classification/: main_01.ipynb  main_01.py  main_02.py
